[tool.poetry]
name = "canvasutils"
version = "0.3.0"
description = "Utilities for interacting with Canvas using Python and the canvasapi."
authors = ["Tomas Beuzen <tomas.beuzen@stat.ubc.ca>"]
readme = "README.md"
homepage = "https://github.com/TomasBeuzen/canvasutils"
repository = "https://github.com/TomasBeuzen/canvasutils"

[tool.poetry.dependencies]
python = "^3.7"
canvasapi = "^2.0.0"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
